<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.wurood.myapplication.MainActivity"
    android:background="@drawable/background">

    <View
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:alpha="0.6"
        android:background="#000000"
        android:layout_alignParentLeft="true" />


    <EditText
        android:id="@+id/email_reg"
        android:layout_width="304dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/pass_reg"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@drawable/ic_user_login"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_user_login"
        android:ems="10"
        android:hint="@string/register_email"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:textColor="#ffffff"
        android:textColorHint="#cccccc" />

    <EditText
        android:id="@+id/pass_reg"
        android:layout_width="304dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="42dp"
        android:layout_marginStart="42dp"
        android:drawableLeft="@drawable/ic_password"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_password"
        android:ems="10"
        android:hint="@string/register_pass"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColor="#ffffff"
        android:textColorHint="#cccccc" />


    <Button
        android:id="@+id/btn_reg"
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="194dp"
        android:background="@drawable/blue_btn"
        android:text="@string/button_register"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/txt_success_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="117dp"
        android:gravity="center_horizontal"
        android:text="@string/account_view"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffff"
        android:textSize="40sp"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/link_login"
        android:layout_width="232dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="92dp"
        android:text="@string/link_Register"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffff" />

</RelativeLayout>