<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"  tools:context="com.example.wurood.myapplication.MainActivity"
    android:background="@drawable/background">

    <View
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:alpha="0.6"
        android:layout_alignParentTop="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="LOGIN"
        android:textSize="70sp"
        android:id="@+id/textView"
        android:textColor="#FFFFFF"
        android:layout_marginTop="65dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="TO"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:id="@+id/textView2"
        android:layout_marginTop="72dp"
        android:layout_alignTop="@+id/textView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/login_view"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/log_email"
        android:singleLine="true"
        android:drawablePadding="10dp"
        android:drawableLeft="@drawable/ic_user_login"
        android:hint="@string/register_email"
        android:textColorHint="#cccccc"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/ic_user_login" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:drawablePadding="10dp"
        android:singleLine="true"
        android:hint="@string/register_pass"
        android:drawableLeft="@drawable/ic_password"
        android:textSize="20sp"
        android:textColorHint="#cccccc"
        android:textColor="#FFFFFF"
        android:id="@+id/log_pass"
        android:layout_below="@+id/log_email"
        android:layout_alignLeft="@+id/log_email"
        android:layout_alignStart="@+id/log_email"
        android:layout_alignRight="@+id/log_email"
        android:layout_alignEnd="@+id/log_email"
        android:drawableStart="@drawable/ic_password" />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/blue_btn"
        android:textColor="@android:color/white"
        android:text="@string/button_sign"
        android:textSize="20sp"
        android:id="@+id/btnsignin"
        android:layout_below="@+id/log_pass"
        android:layout_marginTop="6dp"
        android:layout_alignLeft="@+id/log_pass"
        android:layout_alignStart="@+id/log_pass"
        android:layout_alignRight="@+id/log_pass"
        android:layout_alignEnd="@+id/log_pass" />




</RelativeLayout>