<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.wurood.myapplication.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@android:color/white" />

    <ScrollView
        android:id="@+id/scrolView_account"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">


        <RelativeLayout
            android:id="@+id/linear_account"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="100dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="304dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="100dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/viewbus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/profile_view"
                        android:textStyle="bold" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/colorPrimary">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/name_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/name_validation"
                            android:imeOptions="actionNext"
                            android:inputType="textPersonName"
                            android:textColorHint="@color/colorPrimary" />


                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/colorPrimary">


                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/email_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/email_validation"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress"
                            android:textColorHint="@color/colorPrimary" />

                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/colorPrimary">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/phone_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/number_validation"
                            android:imeOptions="actionNext"
                            android:inputType="phone"
                            android:textColorHint="@color/colorPrimary" />

                    </android.support.design.widget.TextInputLayout>

                    <com.dd.processbutton.iml.ActionProcessButton
                        android:id="@+id/btnUpdate"
                        android:layout_width="187dp"
                        android:layout_height="58dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="16dp"
                        android:text="@string/update_button"
                        android:textColor="@android:color/white"
                        android:textSize="18sp"
                        custom:pb_colorComplete="@color/green_complete"
                        custom:pb_colorError="@color/red_error"
                        custom:pb_colorNormal="@color/colorPrimary"
                        custom:pb_colorPressed="@color/blue_pressed"
                        custom:pb_colorProgress="@color/purple_progress"
                        custom:pb_textComplete="Success"
                        custom:pb_textError="Error"
                        custom:pb_textProgress="Loading"
                        android:layout_marginTop="30dp"/>
                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="183dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_set"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:src="@mipmap/ic_user"
                    android:transitionName="avatar" />

                <ImageView
                    android:id="@+id/btn_lod"
                    android:layout_width="30dp"
                    android:layout_height="40dp"

                    android:layout_alignEnd="@+id/img_set"
                    android:layout_alignParentBottom="true"
                    android:layout_alignRight="@+id/img_set"
                    android:src="@mipmap/ic_addd" />

            </RelativeLayout>


        </RelativeLayout>
    </ScrollView>

</RelativeLayout>


